cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Anas_Parkopedia)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
find_package( OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
file(GLOB sources "*.h*" "*.cpp")
add_executable(Detect_planes ${sources})
target_link_libraries(Detect_planes ${PCL_LIBRARIES} ${OpenCV_LIBS})